fix: buttons in bar overflowing vertically

--- a/source/assets/styles/buttons.scss
+++ b/source/assets/styles/buttons.scss
@@ -677,6 +677,7 @@ label[for="button-sad"]{
         padding:0;
         box-sizing: content-box;
         border:var(--stroke, 1px) solid var(--col-white);
+        box-sizing: border-box;
         // border-top:var(--stroke,1px) solid var(--col-white);
         // border-bottom:var(--stroke,1px) solid var(--col-white);
         border-left: none;
